Made the build process filter out the cs/coffeescript plugins when building the minified package

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="lib/require.js"></script>
 
   <!-- Or 2) Load precompiled script -->
-  <!--<script src="dist/rtst.js"></script>-->
+  <!--<script src="dist/rtst.min.js"></script>-->
   <script src="main.js"></script>
 </head>
 <body>
